# mentat

./: .gitignore  Makefile  README.md  config.yml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml
docs/: CNAME  index.md  installation.md  license.md  usage.md
mentat/: __init__.py  bot.py  cli.py  config.py  creds.py
tests/: hosts.yml  test_cli.py
